@@ -34,6 +34,7 @@ following names for their contribution to the product.
 * Jon Harald Søby
 * Juliano F. Ravasi
 * Leon Weber
+* Leslie Hoare
 * Marco Schuster
 * Matěj Grabovský
 * Matt Johnston
