@@ -143,6 +143,8 @@ class BitmapHandler extends ImageHandler {
 			case 'custom':
 				$err = $this->transformCustom( $image, $scalerParams );
 				break;
+			case 'imext':
+				$err = $this->transformImageMagickExt( $image, $scalerParams );
 			case 'gd':
 			default:
 				$err = $this->transformGd( $image, $scalerParams );
@@ -184,6 +186,8 @@ class BitmapHandler extends ImageHandler {
 			$scaler = 'custom';
 		} elseif ( function_exists( 'imagecreatetruecolor' ) ) {
 			$scaler = 'gd';
+		} elseif ( class_exists( 'Imagick' ) ) {
+			$scaler = 'imext';
 		} else {
 			$scaler = 'client';
 		}
@@ -209,7 +213,7 @@ class BitmapHandler extends ImageHandler {
 		return new ThumbnailImage( $image, $image->getURL(),
 				$params['clientWidth'], $params['clientHeight'], $params['srcPath'] );
 	}
-
+	
 	/**
 	 * Transform an image using ImageMagick
 	 *
@@ -300,6 +304,91 @@ class BitmapHandler extends ImageHandler {
 		}
 
 		return false; # No error
+	}
+	
+	/**
+	 * Transform an image using the Imagick PHP extension
+	 * 
+	 * @param $image File File associated with this thumbnail
+	 * @param $params array Array with scaler params
+	 *
+	 * @return MediaTransformError Error object if error occured, false (=no error) otherwise
+	 */
+	protected function transformImageMagickExt( $image, $params ) {
+		global $wgSharpenReductionThreshold, $wgSharpenParameter, $wgMaxAnimatedGifArea;
+		
+		try {
+			$im = new Imagick();
+			$im->readImage( $params['srcPath'] );
+	
+			if ( $params['mimeType'] == 'image/jpeg' ) {
+				// Sharpening, see bug 6193
+				if ( ( $params['physicalWidth'] + $params['physicalHeight'] )
+						/ ( $params['srcWidth'] + $params['srcHeight'] )
+						< $wgSharpenReductionThreshold ) {
+					// Hack, since $wgSharpenParamater is written specifically for the command line convert
+					list( $radius, $sigma ) = explode( 'x', $wgSharpenParameter );
+					$im->sharpenImage( $radius, $sigma );
+				}
+				$im->setCompressionQuality( 80 );
+			} elseif( $params['mimeType'] == 'image/png' ) {
+				$im->setCompressionQuality( 95 );
+			} elseif ( $params['mimeType'] == 'image/gif' ) {
+				if ( $this->getImageArea( $image, $params['srcWidth'],
+						$params['srcHeight'] ) > $wgMaxAnimatedGifArea ) {
+					// Extract initial frame only; we're so big it'll
+					// be a total drag. :P
+					$im->setImageScene( 0 );
+				} elseif ( $this->isAnimatedImage( $image ) ) {
+					// Coalesce is needed to scale animated GIFs properly (bug 1017).
+					$im = $im->coalesceImages();
+				}
+			}
+			
+			$rotation = $this->getRotation( $image );
+			if ( $rotation == 90 || $rotation == 270 ) {
+				// We'll resize before rotation, so swap the dimensions again
+				$width = $params['physicalHeight'];
+				$height = $params['physicalWidth'];
+			} else {
+				$width = $params['physicalWidth'];
+				$height = $params['physicalHeight'];			
+			}
+			
+			$im->setImageBackgroundColor( new ImagickPixel( 'white' ) );
+			
+			// Call Imagick::thumbnailImage on each frame
+			foreach ( $im as $i => $frame ) {
+				if ( !$frame->thumbnailImage( $width, $height, /* fit */ false ) ) {
+					return $this->getMediaTransformError( $params, "Error scaling frame $i" );
+				}
+			}
+			$im->setImageDepth( 8 );
+			
+			if ( $rotation ) {
+				if ( !$im->rotateImage( new ImagickPixel( 'white' ), $rotation ) ) {
+					return $this->getMediaTransformError( $params, "Error rotating $rotation degrees" );
+				}
+			}
+	
+			if ( $this->isAnimatedImage( $image ) ) {
+				wfDebug( __METHOD__ . ": Writing animated thumbnail\n" );
+				// This is broken somehow... can't find out how to fix it
+				$result = $im->writeImages( $params['dstPath'], true );
+			} else {
+				$result = $im->writeImage( $params['dstPath'] );
+			}
+			if ( !$result ) {
+				return $this->getMediaTransformError( $params, 
+					"Unable to write thumbnail to {$params['dstPath']}" );
+			}
+
+		} catch ( ImagickException $e ) {
+			return $this->getMediaTransformError( $params, $e->getMessage() ); 
+		}
+		
+		return false;
+		
 	}
 
 	/**
@@ -702,6 +791,9 @@ class BitmapHandler extends ImageHandler {
 		switch ( $scaler ) {
 			case 'im':
 				# ImageMagick supports autorotation
+				return true;
+			case 'imext':
+				# Imagick::rotateImage
 				return true;
 			case 'gd':
 				# GD's imagerotate function is used to rotate images, but not
